--- a/css/reset.css
+++ b/css/reset.css
@@ -1,10 +1,16 @@
-*{
+* {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
 
-img{
+ul {
+  list-style-type: none;
+}
+
+img {
   max-width: 100%;
   display: block;
 }
+
+/*# sourceMappingURL=reset.css.map */
