--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,8 @@
+// import variables 
+@import 'variables.scss';
+
 .header{
-    background-image: url("images/SIPLEC_BORGES_Ornella.jpg");
+    background-image: url("../images/SIPLEC_BORGES_Ornella.jpg");
     background-size: contain;
     background-repeat: no-repeat;
     padding-top: 66.64%;
@@ -39,6 +42,10 @@
     display: none;
 }
 
+.nav{
+    background-color: $pink;
+    display:none;
+}
 .list{
     list-style-type: none;
     text-align: center;
@@ -55,6 +62,21 @@
     border-radius: 5px;
     width: 150px;
     text-decoration: none;
+}
+
+.grille{
+    max-width: 1300px;
+    width: 80%; 
+    height: 1rem;
+    margin: 30px auto;
+    border: 1px solid blue;
+    // background-color: cyan;
+}
+
+.grille-element{
+    width: 10px;
+    height: 10px;
+    background-color: #333;
 }
 
 a{
